# PhotoGoalNavigation_2015

./: CMakeLists.txt  README.md  package.xml
src/: .point_corr.hpp.swp  .tum_command_msgs.hpp.swo  Transformation.hpp  photo_goal_nav.cpp  photo_goal_nav.hpp  point_cloud_world_cordinates.cpp  point_corr_with_point_cloud.cpp  rgb_to_point_cloud.cpp  triangulate.hpp  undistort_image.cpp
src/include/: photo_goal_nav.hpp
